--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- 这里配字符和图标-->
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_lecture"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="@string/title_lecture" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_workshop"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_workshop" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_sanctuary"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_sanctuary" />
+
+    <item
+        android:id="@+id/navigation_account"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="@string/title_account" />
+
 
 </menu>
