--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@id/navigation_lecture">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.cloudchat_user.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_lecture"
+        android:name="com.example.cloudchat_volunteer.ui.interactive_lecture.LectureFragment"
+        android:label="@string/title_lecture"
+        tools:layout="@layout/fragment_lecture" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.cloudchat_user.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_workshop"
+        android:name="com.example.cloudchat_volunteer.ui.science_workshop.WorkshopFragment"
+        android:label="@string/title_workshop"
+        tools:layout="@layout/fragment_workshop" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.cloudchat_user.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_sanctuary"
+        android:name="com.example.cloudchat_volunteer.ui.mind_sanctuary.SanctuaryFragment"
+        android:label="@string/title_sanctuary"
+        tools:layout="@layout/fragment_sanctuary" />
+
+    <fragment
+        android:id="@+id/navigation_account"
+        android:name="com.example.cloudchat_volunteer.ui.my_account.AccountFragment"
+        android:label="@string/title_account"
+        tools:layout="@layout/fragment_account" />
 </navigation>
