--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -5,24 +5,40 @@
     android:id="@+id/mobile_navigation"
     app:startDestination="@id/navigation_lecture">
 
+    <!-- Lecture Fragment -->
     <fragment
         android:id="@+id/navigation_lecture"
         android:name="com.example.cloudchat_volunteer.ui.interactive_lecture.LectureFragment"
         android:label="@string/title_lecture"
         tools:layout="@layout/fragment_lecture" />
 
+    <!-- Workshop Fragment -->
     <fragment
         android:id="@+id/navigation_workshop"
         android:name="com.example.cloudchat_volunteer.ui.science_workshop.WorkshopFragment"
         android:label="@string/title_workshop"
         tools:layout="@layout/fragment_workshop" />
 
+    <!-- Sanctuary Fragment -->
     <fragment
         android:id="@+id/navigation_sanctuary"
         android:name="com.example.cloudchat_volunteer.ui.mind_sanctuary.SanctuaryFragment"
         android:label="@string/title_sanctuary"
-        tools:layout="@layout/fragment_sanctuary" />
+        tools:layout="@layout/fragment_sanctuary">
+        <!-- 跳转到 TreeFragment -->
+        <action
+            android:id="@+id/action_sanctuary_to_tree"
+            app:destination="@id/navigation_tree" />
+    </fragment>
 
+    <!-- Tree Fragment -->
+    <fragment
+        android:id="@+id/navigation_tree"
+        android:name="com.example.cloudchat_volunteer.ui.mind_sanctuary.TreeFragment"
+        android:label="@string/title_tree"
+        tools:layout="@layout/fragment_tree" />
+
+    <!-- Account Fragment -->
     <fragment
         android:id="@+id/navigation_account"
         android:name="com.example.cloudchat_volunteer.ui.my_account.AccountFragment"
