--- a/app/src/main/res/layout/fragment_workshop.xml
+++ b/app/src/main/res/layout/fragment_workshop.xml
@@ -7,17 +7,49 @@
     tools:context=".ui.science_workshop.WorkshopFragment">
     <!--context 绑定ui逻辑 -->
 
-    <TextView
-        android:id="@+id/text_workshop"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <Button
+        android:id="@+id/vote_button"
+        android:layout_width="150dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="64dp"
+        android:text="主题投票"
+        android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/text_pushing"
+        android:layout_width="274dp"
+        android:layout_height="97dp"
+        android:layout_marginTop="192dp"
+        android:layout_marginEnd="68dp"
+        android:text="这里是消息推送(后续实现)"
+        android:textSize="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/live_imageview"
+        android:layout_width="265dp"
+        android:layout_height="333dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginBottom="88dp"
+        android:src="@drawable/shadows"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+    <!--    <TextView-->
+<!--        android:id="@+id/text_workshop"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="8dp"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:layout_marginEnd="8dp"-->
+<!--        android:textAlignment="center"-->
+<!--        android:textSize="20sp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
