--- a/app/src/main/res/layout/activity_live.xml
+++ b/app/src/main/res/layout/activity_live.xml
@@ -3,37 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- 顶部居中的 TextView -->
-    <TextView
-        android:id="@+id/liveText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="直播"
-        android:textSize="18sp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp" />
-
-    <!-- 用于显示摄像头内容的 PreviewView -->
-    <androidx.camera.view.PreviewView
-        android:id="@+id/previewView"
+    <SurfaceView
+        android:id="@+id/interactiveView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/liveText"
         android:layout_marginTop="8dp" />
 
-    <!-- 横屏切换图标 -->
-    <ImageButton
-        android:id="@+id/toggleOrientationButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/baseline_crop_free_24"
-        android:contentDescription="@string/toggle_orientation_desc"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_margin="16dp" />
     <!--镜头反转-->
     <ImageButton
-        android:id="@+id/switchCameraButton"
+        android:id="@+id/interactiveCameraButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_switch_camera"
@@ -42,5 +20,15 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp" />
+
+    <Button
+        android:id="@+id/interactiveStreaming"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="开始推流"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:layout_centerHorizontal="true"/>
+
 
 </RelativeLayout>
