--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -14,9 +14,7 @@
             android:id="@+id/profileImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
-
-            android:src="@mipmap/app_icon"
-
+            android:src="@drawable/colledgephoto"
             android:scaleType="centerCrop"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -61,9 +59,7 @@
             android:layout_height="120dp"
             android:layout_marginTop="32dp"
             android:scaleType="centerCrop"
-
-            android:src="@mipmap/app_icon"
-
+            android:src="@drawable/colledgephoto"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -88,7 +84,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-
         <Button
             android:id="@+id/signOutButton"
             android:layout_width="0dp"
@@ -99,7 +94,6 @@
             app:layout_constraintTop_toBottomOf="@id/changePasswordButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
-
         <!-- 注销按钮 -->
         <Button
             android:id="@+id/logoutButton"
@@ -107,11 +101,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="注销账户"
-
             app:layout_constraintTop_toBottomOf="@id/signOutButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
