--- a/app/src/main/res/layout/fragment_tree.xml
+++ b/app/src/main/res/layout/fragment_tree.xml
@@ -58,9 +58,8 @@
 
         <Button
             android:id="@+id/btn_submit_tree"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="150dp"
             android:text="开始聊天" />
     </LinearLayout>
 
