--- a/app/src/main/res/layout/activity_live.xml
+++ b/app/src/main/res/layout/activity_live.xml
@@ -1,34 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/live_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- 直播预览 SurfaceView -->
     <SurfaceView
         android:id="@+id/interactiveView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="8dp" />
+        android:layout_height="match_parent" />
 
-    <!--镜头反转-->
+    <!-- 弹幕覆盖层 -->
+    <master.flame.danmaku.ui.widget.DanmakuView
+        android:id="@+id/danmaku_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:background="@android:color/transparent" />
+
+    <!-- 切换摄像头按钮 -->
     <ImageButton
         android:id="@+id/interactiveCameraButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:src="@drawable/ic_switch_camera"
-        android:contentDescription="@string/switch_camera_desc"
-        android:rotation="180"
+        android:background="@android:color/transparent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp" />
 
+    <!-- 开始/结束推流按钮 -->
     <Button
         android:id="@+id/interactiveStreaming"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="开始推流"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
-        android:layout_centerHorizontal="true"/>
-
-
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="72dp"/>
 </RelativeLayout>
