--- a/app/src/main/res/layout/activity_interactive.xml
+++ b/app/src/main/res/layout/activity_interactive.xml
@@ -8,7 +8,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="8dp" />
-
+    <master.flame.danmaku.ui.widget.DanmakuView
+        android:id="@+id/danmaku_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:keepScreenOn="true" />
     <!--镜头反转-->
     <ImageButton
         android:id="@+id/interactiveCameraButton_"
