--- a/app/src/main/res/layout/fragment_workshop.xml
+++ b/app/src/main/res/layout/fragment_workshop.xml
@@ -25,7 +25,7 @@
         android:layout_height="150dp"
         android:layout_marginTop="192dp"
         android:layout_marginEnd="68dp"
-        android:text="这里是消息推送(后续实现)"
+        android:text="这里是消息推送"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,7 +36,7 @@
         android:layout_height="333dp"
         android:layout_marginStart="68dp"
         android:layout_marginBottom="88dp"
-        android:src="@drawable/shadows"
+        android:src="@drawable/live"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
     <!--    <TextView-->
